--- a/server/package.json
+++ b/server/package.json
@@ -7,22 +7,50 @@
     "build": "npm run build-ts && npm run lint",
     "debug": "npm run build && npm run watch-debug",
     "serve": "node dist/server.js",
+    "serve-debug": "nodemon --inspect dist/server.js",
     "start": "npm run serve",
-    "lint": "tsc --noEmit && eslint \"**/*.{js,ts}\" --quiet --fix"
+    "lint": "tsc --noEmit && eslint \"**/*.{js,ts}\" --quiet --fix",
+    "debug": "npm run build && npm run watch-debug",
+    "watch-debug": "concurrently -k -p \"[{name}]\" -n \"Sass,TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run serve-debug\"",
+    "watch-node": "nodemon dist/server.js",
+    "watch-test": "npm run test -- --watchAll",
+    "watch-ts": "tsc -w",
+    "watch": "concurrently -k -p \"[{name}]\" -n \"Sass,TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-sass\" \"npm run watch-ts\" \"npm run watch-node\""
   },
   "dependencies": {
+    "async": "3.2.0",
     "env-yaml": "0.1.2",
     "express": "4.17.1",
-    "errorhandler": "1.5.1"
+    "express-session": "1.17.1",
+    "errorhandler": "1.5.1",
+    "compression": "1.7.4",
+    "lodash": "^4.17.21",
+    "winston": "3.3.3",
+    "passport": "0.4.1",
+    "passport-facebook": "3.0.0",
+    "passport-local": "1.0.0",
+    "express-validator": "6.9.2"
   },
   "devDependencies": {
+    "@types/async": "3.2.5",
     "@types/express": "^4.17.13",
+    "@types/express-session": "1.17.3",
     "@types/errorhandler": "1.5.0",
+    "@types/compression": "1.7.0",
+    "@types/lodash": "^4.14.170",
+    "@types/passport": "1.0.5",
+    "@types/passport-facebook": "2.1.10",
+    "@types/passport-local": "1.0.33",
+    "@types/request": "2.48.5",
+    "@types/request-promise": "4.1.47",
     "@typescript-eslint/eslint-plugin": "4.14.2",
     "@typescript-eslint/parser": "4.14.2",
+    "@types/winston": "2.4.4",
     "eslint": "7.19.0",
     "nodemon": "^2.0.7",
     "ts-node": "9.1.1",
-    "typescript": "4.1.3"
+    "typescript": "4.1.3",
+    "concurrently": "6.0.2",
+    "nodemon": "^2.0.7"
   }
 }
