Add mongodb! Being used in: - Keep user sessions (we can use same cookies even if server restarts in the middle) - For gettings user on login

--- a/server/.env.yml
+++ b/server/.env.yml
@@ -1,2 +1,4 @@
 port: 4000
 SESSION_SECRET: encryptionsecretkey
+mongo:
+  url: "mongodb+srv://wikipedia-game-app:<password>@wikipedia-game.x7r32.mongodb.net/myFirstDatabase?retryWrites=true&w=majority"
