--- a/server/package.json
+++ b/server/package.json
@@ -18,13 +18,18 @@
     "watch": "concurrently -k -p \"[{name}]\" -n \"Sass,TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-sass\" \"npm run watch-ts\" \"npm run watch-node\""
   },
   "dependencies": {
+    "@types/mongodb": "3.6.5",
     "async": "3.2.0",
+    "bcrypt-nodejs": "0.0.3",
+    "dotenv": "8.2.0",
     "env-yaml": "0.1.2",
     "express": "4.17.1",
     "express-session": "1.17.1",
     "errorhandler": "1.5.1",
     "compression": "1.7.4",
+    "connect-mongo": "4.4.0",
     "lodash": "^4.17.21",
+    "mongoose": "5.11.15",
     "winston": "3.3.3",
     "passport": "0.4.1",
     "passport-facebook": "3.0.0",
@@ -33,6 +38,8 @@
   },
   "devDependencies": {
     "@types/async": "3.2.5",
+    "@types/bcrypt-nodejs": "0.0.31",
+    "@types/bluebird": "3.5.33",
     "@types/express": "^4.17.13",
     "@types/express-session": "1.17.3",
     "@types/errorhandler": "1.5.0",
