--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,6 @@
     "serve-debug": "nodemon --inspect dist/server.js",
     "start": "npm run serve",
     "lint": "tsc --noEmit && eslint \"**/*.{js,ts}\" --quiet --fix",
-    "debug": "npm run build && npm run watch-debug",
     "watch-debug": "concurrently -k -p \"[{name}]\" -n \"Sass,TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run serve-debug\"",
     "watch-node": "nodemon dist/server.js",
     "watch-test": "npm run test -- --watchAll",
@@ -21,25 +20,29 @@
     "@types/mongodb": "3.6.5",
     "async": "3.2.0",
     "bcrypt-nodejs": "0.0.3",
-    "dotenv": "8.2.0",
-    "env-yaml": "0.1.2",
-    "express": "4.17.1",
-    "express-session": "1.17.1",
-    "errorhandler": "1.5.1",
+    "class-transformer": "^0.4.0",
+    "class-validator": "^0.13.1",
     "compression": "1.7.4",
     "connect-mongo": "4.4.0",
+    "dotenv": "8.2.0",
+    "env-yaml": "0.1.2",
+    "errorhandler": "1.5.1",
+    "express": "4.17.1",
+    "express-session": "1.17.1",
+    "express-validator": "6.9.2",
     "lodash": "^4.17.21",
     "mongoose": "5.11.15",
-    "winston": "3.3.3",
     "passport": "0.4.1",
     "passport-facebook": "3.0.0",
     "passport-local": "1.0.0",
-    "express-validator": "6.9.2"
+    "winston": "3.3.3"
   },
   "devDependencies": {
     "@types/async": "3.2.5",
     "@types/bcrypt-nodejs": "0.0.31",
     "@types/bluebird": "3.5.33",
+    "@types/compression": "1.7.0",
+    "@types/errorhandler": "1.5.0",
     "@types/express": "^4.17.13",
     "@types/express-session": "1.17.3",
     "@types/errorhandler": "1.5.0",
@@ -50,14 +53,13 @@
     "@types/passport-local": "1.0.33",
     "@types/request": "2.48.5",
     "@types/request-promise": "4.1.47",
+    "@types/winston": "2.4.4",
     "@typescript-eslint/eslint-plugin": "4.14.2",
     "@typescript-eslint/parser": "4.14.2",
-    "@types/winston": "2.4.4",
+    "concurrently": "6.0.2",
     "eslint": "7.19.0",
     "nodemon": "^2.0.7",
     "ts-node": "9.1.1",
-    "typescript": "4.1.3",
-    "concurrently": "6.0.2",
-    "nodemon": "^2.0.7"
+    "typescript": "4.1.3"
   }
 }
