--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "class-validator": "^0.13.1",
     "compression": "1.7.4",
     "connect-mongo": "4.4.0",
+    "continuation-local-storage": "^3.2.1",
     "dotenv": "8.2.0",
     "env-yaml": "0.1.2",
     "errorhandler": "1.5.1",
@@ -32,6 +33,7 @@
     "express-validator": "6.9.2",
     "lodash": "^4.17.21",
     "mongoose": "5.11.15",
+    "node-uuid": "^1.4.8",
     "passport": "0.4.1",
     "passport-facebook": "3.0.0",
     "passport-local": "1.0.0",
@@ -45,8 +47,6 @@
     "@types/errorhandler": "1.5.0",
     "@types/express": "^4.17.13",
     "@types/express-session": "1.17.3",
-    "@types/errorhandler": "1.5.0",
-    "@types/compression": "1.7.0",
     "@types/lodash": "^4.14.170",
     "@types/passport": "1.0.5",
     "@types/passport-facebook": "2.1.10",
