--- a/server/package.json
+++ b/server/package.json
@@ -4,17 +4,19 @@
   "description": "Typescript + Node.js REST server application",
   "scripts": {
     "build-ts": "tsc",
-    "build": "npm run build-ts && npm run lint",
+    "build": "npm run build-ts && npm run lint && npm run build-ui",
+    "build-ui": "cp -r ../client  ./dist",
     "debug": "npm run build && npm run watch-debug",
     "serve": "node dist/server.js",
     "serve-debug": "nodemon --inspect dist/server.js",
     "start": "npm run serve",
     "lint": "tsc --noEmit && eslint \"**/*.{js,ts}\" --quiet --fix",
-    "watch-debug": "concurrently -k -p \"[{name}]\" -n \"Sass,TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run serve-debug\"",
+    "watch-debug": "concurrently -k -p \"[{name}]\" -n \"Sass,TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-ui\" \"npm run watch-ts\" \"npm run serve-debug\"",
+    "watch-ui": "watch \"npm run build-ui\" ../client",
     "watch-node": "nodemon dist/server.js",
     "watch-test": "npm run test -- --watchAll",
     "watch-ts": "tsc -w",
-    "watch": "concurrently -k -p \"[{name}]\" -n \"Sass,TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-sass\" \"npm run watch-ts\" \"npm run watch-node\""
+    "watch": "concurrently -k -p \"[{name}]\" -n \"Sass,TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-ui\" \"npm run watch-ts\" \"npm run watch-node\""
   },
   "dependencies": {
     "@types/mongodb": "3.6.5",
@@ -31,12 +33,16 @@
     "express": "4.17.1",
     "express-session": "1.17.1",
     "express-validator": "6.9.2",
+    "jsdom": "^17.0.0",
     "lodash": "^4.17.21",
     "mongoose": "5.11.15",
     "node-uuid": "^1.4.8",
+    "node-fetch": "2.6.1",
     "passport": "0.4.1",
     "passport-facebook": "3.0.0",
     "passport-local": "1.0.0",
+    "path": "^0.12.7",
+    "watch": "^1.0.2",
     "winston": "3.3.3"
   },
   "devDependencies": {
@@ -47,7 +53,9 @@
     "@types/errorhandler": "1.5.0",
     "@types/express": "^4.17.13",
     "@types/express-session": "1.17.3",
+    "@types/jsdom": "^16.2.13",
     "@types/lodash": "^4.14.170",
+    "@types/node-fetch": "^2.5.12",
     "@types/passport": "1.0.5",
     "@types/passport-facebook": "2.1.10",
     "@types/passport-local": "1.0.33",
