--- a/server/package.json
+++ b/server/package.json
@@ -22,8 +22,8 @@
     "@types/mongodb": "3.6.5",
     "async": "3.2.0",
     "bcrypt-nodejs": "0.0.3",
-    "class-transformer": "^0.4.0",
-    "class-validator": "^0.13.1",
+    "class-transformer": "^0.3.2",
+    "class-validator": "^0.12.2",
     "compression": "1.7.4",
     "connect-mongo": "4.4.0",
     "continuation-local-storage": "^3.2.1",
@@ -36,12 +36,14 @@
     "jsdom": "^17.0.0",
     "lodash": "^4.17.21",
     "mongoose": "5.11.15",
-    "node-uuid": "^1.4.8",
     "node-fetch": "2.6.1",
+    "node-uuid": "^1.4.8",
     "passport": "0.4.1",
     "passport-facebook": "3.0.0",
     "passport-local": "1.0.0",
     "path": "^0.12.7",
+    "reflect-metadata": "^0.1.13",
+    "routing-controllers": "^0.9.0",
     "watch": "^1.0.2",
     "winston": "3.3.3"
   },
@@ -50,23 +52,27 @@
     "@types/bcrypt-nodejs": "0.0.31",
     "@types/bluebird": "3.5.33",
     "@types/compression": "1.7.0",
+    "@types/continuation-local-storage": "^3.2.3",
     "@types/errorhandler": "1.5.0",
     "@types/express": "^4.17.13",
     "@types/express-session": "1.17.3",
     "@types/jsdom": "^16.2.13",
     "@types/lodash": "^4.14.170",
     "@types/node-fetch": "^2.5.12",
+    "@types/node-uuid": "^0.0.29",
     "@types/passport": "1.0.5",
     "@types/passport-facebook": "2.1.10",
     "@types/passport-local": "1.0.33",
     "@types/request": "2.48.5",
     "@types/request-promise": "4.1.47",
+    "@types/source-map-support": "^0.5.4",
     "@types/winston": "2.4.4",
     "@typescript-eslint/eslint-plugin": "4.14.2",
     "@typescript-eslint/parser": "4.14.2",
     "concurrently": "6.0.2",
     "eslint": "7.19.0",
     "nodemon": "^2.0.7",
+    "source-map-support": "^0.5.20",
     "ts-node": "9.1.1",
     "typescript": "4.1.3"
   }
