--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,5 +1,6 @@
 {
     "compilerOptions": {
+        "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
         "module": "commonjs",
         "esModuleInterop": true,
@@ -7,9 +8,9 @@
         "target": "es6",
         "noImplicitAny": true,
         "moduleResolution": "node",
-        "sourceMap": true,
         "outDir": "dist",
         "baseUrl": ".",
+        "inlineSourceMap": true,
         "paths": {
             "*": [
                 "node_modules/*",
